--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
-.DS_Store
+test-results
 node_modules
-/build
+
+# Output
+.output
+.vercel
 /.svelte-kit
-/package
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
 .env
 .env.*
 !.env.example
+!.env.test
+
+# DB
 dev.db
-/test-results
+
+# VSCode
 /.vscode
-*.db
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
