--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
     "vitest": "^2.1.3"
+  },
+  "dependencies": {
+    "mode-watcher": "^0.4.1"
   }
 }
