--- a/package.json
+++ b/package.json
@@ -16,39 +16,36 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.22.0",
     "@playwright/test": "^1.48.2",
     "@sveltejs/adapter-vercel": "^5.4.6",
     "@sveltejs/kit": "^2.7.3",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.14",
     "@tailwindcss/typography": "^0.5.15",
     "@types/eslint": "^9.6.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.8.5",
-    "autoprefixer": "^10.4.20",
-    "cssnano": "^7.0.6",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.46.0",
     "fs-extra": "^11.2.0",
     "globals": "^15.11.0",
     "mdsvex": "^0.12.3",
-    "postcss": "^8.4.47",
-    "postcss-load-config": "^6.0.1",
+    "mode-watcher": "^0.4.1",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.7",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "shiki": "^1.22.2",
     "svelte": "^5.1.6",
     "svelte-check": "^4.0.5",
     "svelte-inview": "^4.0.4",
-    "tailwindcss": "^3.4.14",
-    "tslib": "^2.8.0",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2",
     "vite": "^5.4.10",
     "vitest": "^2.1.4"
   },
-  "dependencies": {
-    "mode-watcher": "^0.4.1"
-  }
+  "dependencies": {}
 }
